People section complete

--- a/02.people.md
+++ b/02.people.md
@@ -9,22 +9,42 @@ This pages lists the functions
 | Sandor Talas | | IOF Avisor |
 
 (people:courses)=
-## Course setters and controllers
+## Event teams
 
-| Name | Contact | Role | Event |
+| Name | Contact | Role | Events |
 |:-|-|-:|-:|
 | <span style="background-color: black; color: white;">&nbsp;Jim Anderson&nbsp;</span> | In memory | Course Setter | WARM-UP |
-| Marina Iskhakovs | | Course Setter | WARM-UP |
-| Fedor Iskhakov | | Course Controller | WARM-UP |
+| Marina Iskhakova | | Course Setter | WARM-UP |
+| Fedor Iskhakov | | Course Controller, mapper | WARM-UP |
 | Cathy Hogg | | Course Setter | MASS |
 | Belinda Allison | | Course Controller | MASS |
 | Michael Reed | | Course Setter | MIDDLE |
 | Emily Walter | | Course Controller | MIDDLE |
 | Tom Walter | | Course Controller | MIDDLE |
-| Cath Chalmers | | Course Setter | SPRINT |
-| Eoin Rothery | | Course Controller | SPRINT |
-| Fedor Iskhakov | | Course Setter | LONG |
+| Cath Chalmers | | Course Setter, mapper | SPRINT |
+| Eoin Rothery | | Course Controller, mapper | SPRINT |
+| Fedor Iskhakov | | Course Setter, mapper | LONG |
 | Marina Iskhakova | | Course Controller | LONG |
+| Andrew Slattery | | Mapper | WARM-UP<br/>MASS<br/>MIDDLE<br/>SPINT<br/>LONG |
+| Tate Needham | | Mapper | MIDDLE |
+
+(people:special)=
+## Special support roles
+
+| Name | Contact | Role | Present at events |
+|:-|-|-:|-:|
+| <span style="background-color: black; color: white;">&nbsp;Jim Anderson&nbsp;</span> | In memory | Social & Trails | In memory |
+| Phil Walker | | Grants | Yes |
+| Andrew Cheffers | | OACT Finance | Yes |
+| Paul De Jongh | | OACT Website | |
+| Arpad Koscik | | Commentary | Yes |
+| Emily Stewart-Reed | | Promo & Social Media | Yes |
+| Raynie McNee | | Promo & Social Media | Yes |
+| Alysha McNee | | Promo & Social Media | Yes |
+| Noel Schoknecht  | | Design | No |
+| Ariadna Iskhakova | | Design | Yes |
+| Veronika Iskhakova | | Presentations Assistant | Yes |
+
 
 (people:start)=
 ## Start team 
@@ -120,7 +140,7 @@ This pages lists the functions
 
 - follow the [schedule](schedule:warmup) for the `IT team` on each day
 - run all aspects of IT support of the Carnival
-- produce preliminary live results and official results
+- produce preliminary live results and the official Championship results
 - see [separate page](04.computers.md) for detailed information
 
 | Name | Contact | Role | Availability |
@@ -141,21 +161,58 @@ This pages lists the functions
 - follow the [schedule](schedule:warmup) for the `parking team` on each day
 - parking marshals meet the arriving competitors and guide them to the parking spots
 - traffic marshals ensure safety of competitors when moving along and crossing the public roads
-- 
+- *MASS event will require particular care as the parking spots are limited and distributed along heavily used road*
+- *LONG event at Kowan forest is run behind the locked gate, requiring special marshals at the gate to let in and out competitors, see corresponding entries in the [schedule](schedule:long)*
 
-| Event | Parking marshals | Traffic marshals |
-|:-|-:|-:|
-| WARM-UP | | |
-| MASS | | |
-| MIDDLE | | |
-| SPRINT | | |
-| LONG | | |
+| Name | Contact | Role | Availability |
+|:-|-|-:|-:|
+| ? | | Parking marshal | WARM-UP, SPINT |
+| ? | | Parking marshal | ? |
+| ? | | Parking marshal | ? |
+| ? | | Parking marshal | ? |
+| ? | | Parking marshal | ? |
+| Ann Ingwersen | | Traffic marshal | Friday, ? |
+| Frank Ingwersen | | Traffic marshal | Friday, ?<br/>Saturday, ? |
+| ? | | Traffic marshal | ? |
+| ? | | Traffic marshal | ? |
+| ? | | Traffic marshal | ? |
+| ? | | Kowan gate marshal | Sunday, 7:00 - 10:00 |
+| ? | | Kowan gate marshal | Sunday, ? |
 
-| Parking & Marshals Ann Ingwersen   | | | Yes |
-| Parking & Marshals Frank Ingwersen | | | Yes |
+
+(people:cometry)=
+## Come-and-try team
+
+- follow the [schedule](schedule:warmup) for the Come-and-try tent on each day
+- welcome newcomers orienteers and MTBO riders
+- provide help and instructions on how to begin MTBO
+- educate about orienteering in general
+
+| Name | Contact | Role | Availability |
+|:-|-|-:|-:|
+| Toni Brown | | Coach | ? |
+| Raynie McNee | | Coach | ? |
+| ? | | Coach | ? |
+
+(people:kids-tent)=
+## Kids tent
+
+- follow the [schedule](schedule:warmup) for the Kids tent on each day
+- watch after the kids while their parents are competing
+- play orienteering games and activities
+
+| Name | Contact | Role | Availability |
+|:-|-|-:|-:|
+| ? | | Caregiver | ? |
+| ? | | Caregiver | ? |
+
 
 (people:controls)=
 ## Controls setup and collection
+
+- as a rule, controls will be set by the course setters and controllers
+- help with setting and especially collecting controls is *greatly appreciated*
+- see the [schedule](schedule:warmup) for the course closure time for each event, after which the control collection teams will start their work
 
 | Event | Setup | Collection |
 |:-|-:|-:|
@@ -164,63 +221,3 @@ This pages lists the functions
 | MIDDLE | Michael<br/>Emily<br/>Tom<br/>Emily<br/>Matt Shadwell | Michael<br/>Emily<br/>Tom<br/>Emily<br/>Matt Shadwell |
 | SPRINT | Eoin<br/>Cath | Eoin<br/>Cath<br/>2? |
 | LONG | Marina<br/>Fedor | 6? |
-
-(people:cometry)=
-## Come-and-try team
-
-(people:kids-tent)=
-## Kids tent
-
-
-## Volunteers
-
-|     Role                                       |     14 OCT,   SPRINT, START 9.00-10.00am     Finish   closure 11.00am                                 |     14 OCT,   MIDDLE, START 2pm-3pm     Finish   closure 5:00pm                                    |     15 OCT,   LONG, START 9:00-10:00am     Finish   closure 1:00pm                                                                                              |
-|------------------------------------------------|-------------------------------------------------------------------------------------------------------|----------------------------------------------------------------------------------------------------|-----------------------------------------------------------------------------------------------------------------------------------------------------------------|
-|     Course Designer                            |     Cath Chalmers (flags only)                                                                        |     Jim Anderson/Marina   (flags and carflutes)                                                    |     Fedor Iskhakov (flags and carflutes)                                                                                                                        |
-|     Controller                                 |     Eoin Rothery                                                                                      |     Marina Iskhakova                                                                               |     Marina Iskhakova                                                                                                                                            |
-|     Organiser                                  |     Marina    & Fedor Iskhakov                                                                        |     Marina    & Fedor Iskhakov                                                                     |     Marina    & Fedor Iskhakov                                                                                                                                  |
-|     Mapper                                     |     Andrew / Eoin & Cath                                                                              |     Andrew Slattery                                                                                |     Andrew / Fedor                                                                                                                                              |
-|     Computers &   Registration Desk (2)        |     8:00am-11.00am        8:00- 9.30 Rego  Fedor/Alex       9:30-11:00 Computer Finish -Fedor/Alex    |     1.15pm-5pm     1:15-2:45pm Rego - Fedor/Alex     2:45- 5:00pm Computer Finish  - Fedor/Alex    |     8am-1pm     8:00-10:00 Rego -    Fedor/Alex     10:00-1:00pm   Computer Finish -    Fedor/Alex                                                              |
-|     Map Boards Hire &   Beginners Intro (1)    |     8.00am-10.00am – Raynie,   Yuejia                                                                 |     1.15pm-3pm –  Alex (only 7 people)                                                             |     8.30am-9.45am – Alex (only 5 people)                                                                                                                        |
-|     Arena Set up (2)                           |     7.00am-8.00am Fedor/Marina                                                                        |     12.45pm-1.15pm - Fedor/Alex                                                                    |     7.30am-8.00am Fedor/Marina/Alex                                                                                                                             |
-|     Setting Controls   (2)                     |     7.00am- 8.30am - Cath / Eoin                                                                      |      12pm – 2pm -  Marina + Fedor (day before   carflutes)                                         |     5.30am-7.30am Marina +   Fedor                                                                                                                              |
-|     START Marshals   (2)                       |     9.00am-10.00am – Cath / Eoin                                                                      |     2pm-3pm  – Cath / Emily   (the last starter)                                                   |     9am-10am – Cath / Marina                                                                                                                                    |
-|     Maps printing                              |     12th Oct - Office                                                                             |     done                                                                                           |     done                                                                                                                                                        |
-|     Towing OACT   Trailer                      |     Marina / Fedor (Friday from shed)                                                                 |     Marina / Fedor (from Cotter   Pines)                                                           |     Marina / Fedor (from Sparrow to shed)                                                                                                                       |
-|     Towing Toilets                             |     (Friday delivered by 5pm to Pinnacle     Move them from Sprint   to Middle –     Rohan            |     Move them from Pinnacle to Cotter Pines  -     Rohan                                           |     (Move them from Cotter Pines/home  and then to Sparrow Rohan     (they will be picked   up on Monday morning from Sparrow – return in front of the gate)    |
-|     Parking Marshalls   (2)                    |     7.30am-8.45am – Frank   and Ann Ingwersen                                                         |     12.30pm – 2.30pm  - Frank and Ann Ingwersen   (Assembly) \ Yuejia – main gate                  |     8am-9am - Frank and Ann Ingwersen                                                                                                                           |
-|     PRESENTATIONS                              |     10.30am-11am    - Marina, Cath, Eoin                                                              |     4pm-4.30pm    - Marina, Fedor                                                                  |     12pm-12.30pm    - Marina, Fedor                                                                                                                             |
-|     Controls   collection (3-4)                |     11.00pm – 11.30pm – Eoin, Cath, Cathy Hogg                                                        |     5pm-6pm – Marina, Cathy, Rohan, Ricky  +        1 person (on a day)                            |     1pm-2pm – Marina, Emily, Rohan, Ricky   + car +   1 people (on a day)                                                                                       |
-|     Arena pack up   (2-3)                      |     11.00pm - 12.00pm   – Fedor+ Alex                                                                 |     5.00pm-6.00pm   -  Fedor+ Alex                                                                 |     1pm-3pm – Fedor+Alex                                                                                                                                        |
-|     Signage on Roads   (1)                     |     7am Marina/Fedor                                                                                  |     12.45pm - Marina/Fedor                                                                         |     Marina/Fedor - collect                                                                                                                                      |
-|     First-Aid officer   (1)                    |     9am-12.00pm – Raynie                                                                              |     2.30pm-5pm - 1 first-aid officer                                                               |     9:30am-1pm  - 1 first-aid officer                                                                                                                           |
-|     Coffee van (1)                             |     8am – 10am Coffee Van,   Charlie                                                                  |                                                                                                    |     7.45am – 10am Coffee Van,   Charlie                                                                                                                         |
-|     ALL CREW                                   |     Fedor, Marina,   Cath, Eoin, Alex, Ann Ingwersen, Frank, Raynie, Cathy, Yuejia -10                |     Fedor, Marina,   Cath, Emily, Alex, Ann Ingwersen, Frank, Cathy, Yuejia (9)                    |     Fedor, Marina,   Cath, Emily, Alex, Ann Ingwersen, Frank, Yuejia (8 )                                                                                       |
-
-
-# Full list of all people
-
-| Photo | Name | Contact | Role | Present at events |
-|-|:-|-|-:|:-:|
-| Andrew Slattery | | Mapper | Yes |
-| Jim Anderson | | Social & Trails | In memory |
-| Phil Walker | | Grants | Yes |
-| Andrew Cheffers | | Finance OACT | Yes |
-| Paul De Jongh | | OACT Website | Yes? |
-| Arpad Koscik | | Commentary | Yes |
-| Emily Stewart-Reed | | Promo & Social Media | Yes |
-| Raynie McNee | | Come & Try MTBO | Yes |
-| Alysha McNee | | Promo & Social Media | Yes |
-| Rohan Hyslop | | Transport & Logistics | Yes |
-| Noel Schoknecht  | | Design | |
-| Ariadna Iskhakova | | Design | Yes |
-| Mesho Radio Tate Needham | | | Yes |
-| It Team Alex Maksimov | | | Yes |
-| It Team Owen Radajewski | | | Yes |
-| It Team Henry Gotzinger | | | Yes |
-| It Team Oliver Gotzinger | | | Yes |
-| Presentations Assistant Veronika Iskhakova | | | Yes |
-
-| Arpad Koscik | | Commentary |
-
-
