--- a/04.computers.md
+++ b/04.computers.md
@@ -10,7 +10,12 @@ This page contains the information for the IT team.
 ## Schematic for the Carnival IT setup
 
 
-## Network setup details
+## Technical notes
+
+
+### Network setup
+
+
 
 
 
