Ready to show off

--- a/02.faces.md
+++ b/02.faces.md
@@ -1,5 +1,5 @@
 (people:faces)=
-# Faces of the Carnival
+# 🤪 Faces of the Carnival
 
 ::::{grid}
 :gutter: 2
@@ -15,12 +15,12 @@ Marina Iskhakova
 Fedor Iskhakov
 :::
 :::{grid-item-card}
-![alt text](_static/faces/3_Sandor_Talas.jpg) 
+![](_static/faces/3_Sandor_Talas.jpg) 
 +++
 Sandor Talas
 :::
 :::{grid-item-card}
-![alt text](_static/faces/4_Andrew_Slattery.jpg) 
+![](_static/faces/4_Andrew_Slattery.jpg) 
 +++
 Andrew Slattery
 :::
@@ -30,22 +30,22 @@ Andrew Slattery
 :gutter: 2
 
 :::{grid-item-card}
-![alt text](_static/faces/5_Emily_StewartReed.jpg) 
+![](_static/faces/5_Emily_StewartReed.jpg) 
 +++
 Emily StewartReed
 :::
 :::{grid-item-card}
-![alt text](_static/faces/6_Raynie_McNee.jpg) 
+![](_static/faces/6_Raynie_McNee.jpg) 
 +++
 Raynie McNee
 :::
 :::{grid-item-card}
-![alt text](_static/faces/7_Alysha_McNee.jpg) 
+![](_static/faces/7_Alysha_McNee.jpg) 
 +++
 Alysha McNee
 :::
 :::{grid-item-card}
-![alt text](_static/faces/8_Jim_Anderson.jpg) 
+![](_static/faces/8_Jim_Anderson.jpg) 
 +++
 <span style="background-color: black; color: white;">&nbsp;Jim Anderson&nbsp;</span>
 :::
@@ -55,22 +55,22 @@ Alysha McNee
 :gutter: 2
 
 :::{grid-item-card}
-![alt text](_static/faces/9_Cath_Chalmers.jpg) 
+![](_static/faces/9_Cath_Chalmers.jpg) 
 +++
 Cath Chalmers
 :::
 :::{grid-item-card}
-![alt text](_static/faces/10_Ann_Scown.jpg) 
+![](_static/faces/10_Ann_Scown.jpg) 
 +++
 Ann Scown
 :::
 :::{grid-item-card}
-![alt text](_static/faces/11_John_Scown.jpg) 
+![](_static/faces/11_John_Scown.jpg) 
 +++
 John Scown
 :::
 :::{grid-item-card}
-![alt text](_static/faces/12_Rohan_Hyslop.jpg) 
+![](_static/faces/12_Rohan_Hyslop.jpg) 
 +++
 Rohan Hyslop
 :::
@@ -80,22 +80,22 @@ Rohan Hyslop
 :gutter: 2
 
 :::{grid-item-card}
-![alt text](_static/faces/13_Phil_Walker.jpg) 
+![](_static/faces/13_Phil_Walker.jpg) 
 +++
 Phil Walker
 :::
 :::{grid-item-card}
-![alt text](_static/faces/14_Andrew_Cheffers.jpg) 
+![](_static/faces/14_Andrew_Cheffers.jpg) 
 +++
 Andrew Cheffers
 :::
 :::{grid-item-card}
-![alt text](_static/faces/15_Paul_DeJong.jpg) 
+![](_static/faces/15_Paul_DeJong.jpg) 
 +++
 Paul DeJong
 :::
 :::{grid-item-card}
-![alt text](_static/faces/16_Arpad_Koscik.jpg) 
+![](_static/faces/16_Arpad_Koscik.jpg) 
 +++
 Arpad Koscik
 :::
@@ -105,22 +105,22 @@ Arpad Koscik
 :gutter: 2
 
 :::{grid-item-card}
-![alt text](_static/faces/17_Noel_Schoknecht.jpg) 
+![](_static/faces/17_Noel_Schoknecht.jpg) 
 +++
 Noel Schoknecht
 :::
 :::{grid-item-card}
-![alt text](_static/faces/18_Ariadna_Iskhakova.jpg) 
+![](_static/faces/18_Ariadna_Iskhakova.jpg) 
 +++
 Ariadna Iskhakova
 :::
 :::{grid-item-card}
-![alt text](_static/faces/19_Ann_Ingwersen.jpg) 
+![](_static/faces/19_Ann_Ingwersen.jpg) 
 +++
 Ann Ingwersen
 :::
 :::{grid-item-card}
-![alt text](_static/faces/20_Frank_Ingwersen.jpg)
+![](_static/faces/20_Frank_Ingwersen.jpg)
 +++
 Frank Ingwersen
 :::
@@ -128,6 +128,27 @@ Frank Ingwersen
 
 ::::{grid}
 :gutter: 2
+
+:::{grid-item-card}
+![](_static/faces/21_AlexMaximov.jpg)
++++
+Alex Maximov
+:::
+:::{grid-item-card}
+![](_static/faces/a.jpg)
++++
+-
+:::
+:::{grid-item-card}
+![](_static/faces/a.jpg)
++++
+-
+:::
+:::{grid-item-card}
+![](_static/faces/a.jpg)
++++
+-
+:::
 
 
 ::::
