Testing search link

--- a/02.faces.md
+++ b/02.faces.md
@@ -7,7 +7,7 @@
 :::{grid-item-card}
 ![](_static/faces/1_Marina_Iskhakova.jpg)
 +++
-Marina Iskhakova
+<a href="search.html?q=marina+iskhakova" style="text-decoration: none; color: inherit;">Marina Iskhakova</a>
 :::
 :::{grid-item-card}
 ![](_static/faces/2_Fedor_Iskhakov.jpg)
@@ -145,10 +145,12 @@ Alex Maximov
 -
 :::
 :::{grid-item-card}
-![](_static/faces/a.jpg)
+![](_static/faces/26_Veronika_Iskhakova.jpg)
 +++
--
+Veronika Iskhakova
 :::
 
 
 ::::
+
+Clicking on the name runs a search over the whole Operations Manual for this person.
