--- a/02.faces.md
+++ b/02.faces.md
@@ -7,22 +7,72 @@
 :::{grid-item-card}
 ![](_static/faces/1_Marina_Iskhakova.jpg)
 +++
-<a href="search.html?q=marina+iskhakova" style="text-decoration: none; color: inherit;">Marina Iskhakova</a>
+<a href="search.html?q=Marina+Iskhakova" style="text-decoration: none; color: inherit;">Marina Iskhakova</a>
 :::
 :::{grid-item-card}
 ![](_static/faces/2_Fedor_Iskhakov.jpg)
 +++
-Fedor Iskhakov
+<a href="search.html?q=Fedor+Iskhakov" style="text-decoration: none; color: inherit;">Fedor Iskhakov</a>
 :::
 :::{grid-item-card}
 ![](_static/faces/3_Sandor_Talas.jpg) 
 +++
-Sandor Talas
+<a href="search.html?q=Sandor+Talas" style="text-decoration: none; color: inherit;">Sandor Talas</a>
 :::
 :::{grid-item-card}
 ![](_static/faces/4_Andrew_Slattery.jpg) 
 +++
-Andrew Slattery
+<a href="search.html?q=Andrew+Slattery" style="text-decoration: none; color: inherit;">Andrew Slattery</a>
+:::
+::::
+
+::::{grid}
+:gutter: 2
+
+:::{grid-item-card}
+![](_static/faces/1_WarmUp_JimAnderson.jpg)
++++
+<a href="search.html?q=Jim+Anderson" style="text-decoration: none; background-color: black; color: white;">&nbsp;Jim Anderson&nbsp;</a>
+:::
+:::{grid-item-card}
+![](_static/faces/2_MASS_Belinda.jpg)
++++
+<a href="search.html?q=Belinda+Allison" style="text-decoration: none; color: inherit;">Belinda Allison</a>
+:::
+:::{grid-item-card}
+![](_static/faces/2_MASS_CathyHogg.jpg)
++++
+<a href="search.html?q=Cathy+Hogg" style="text-decoration: none; color: inherit;">Cathy Hogg</a>
+:::
+:::{grid-item-card}
+![](_static/faces/3_MIDDLE_MichaelReed.jpg)
++++
+<a href="search.html?q=Michael+Reed" style="text-decoration: none; color: inherit;">Michael Reed</a>
+:::
+::::
+
+::::{grid}
+:gutter: 2
+
+:::{grid-item-card}
+![](_static/faces/3_MIDDLE_EmilyWalter.jpg)
++++
+<a href="search.html?q=Emily+Walter" style="text-decoration: none; color: inherit;">Emily Walter</a>
+:::
+:::{grid-item-card}
+![](_static/faces/3_MIDDLE_TomWalter.jpg)
++++
+<a href="search.html?q=Tom+Walter" style="text-decoration: none; color: inherit;">Tom Walter</a>
+:::
+:::{grid-item-card}
+![](_static/faces/9_Cath_Chalmers.jpg)
++++
+<a href="search.html?q=Cath+Chalmers" style="text-decoration: none; color: inherit;">Cath Chalmers</a>
+:::
+:::{grid-item-card}
+![](_static/faces/4_SPRINT_EoinRothery.jpg)
++++
+<a href="search.html?q=Eoin+Rothery" style="text-decoration: none; color: inherit;">Eoin Rothery</a>
 :::
 ::::
 
@@ -32,97 +82,72 @@ Andrew Slattery
 :::{grid-item-card}
 ![](_static/faces/5_Emily_StewartReed.jpg) 
 +++
-Emily StewartReed
+<a href="search.html?q=Emily+Stewart-Reed" style="text-decoration: none; color: inherit;">Emily Stewart-Reed</a>
 :::
 :::{grid-item-card}
 ![](_static/faces/6_Raynie_McNee.jpg) 
 +++
-Raynie McNee
+<a href="search.html?q=Raynie+McNee" style="text-decoration: none; color: inherit;">Raynie McNee</a>
 :::
 :::{grid-item-card}
 ![](_static/faces/7_Alysha_McNee.jpg) 
 +++
-Alysha McNee
-:::
-:::{grid-item-card}
-![](_static/faces/8_Jim_Anderson.jpg) 
-+++
-<span style="background-color: black; color: white;">&nbsp;Jim Anderson&nbsp;</span>
-:::
-::::
-
-::::{grid}
-:gutter: 2
-
-:::{grid-item-card}
-![](_static/faces/9_Cath_Chalmers.jpg) 
-+++
-Cath Chalmers
+<a href="search.html?q=Alysha+McNee" style="text-decoration: none; color: inherit;">Alysha McNee</a>
 :::
 :::{grid-item-card}
 ![](_static/faces/10_Ann_Scown.jpg) 
 +++
-Ann Scown
+<a href="search.html?q=Ann+Scown" style="text-decoration: none; color: inherit;">Ann Scown</a>
 :::
+::::
+
+::::{grid}
+:gutter: 2
+
 :::{grid-item-card}
 ![](_static/faces/11_John_Scown.jpg) 
 +++
-John Scown
+<a href="search.html?q=John+Scown" style="text-decoration: none; color: inherit;">John Scown</a>
 :::
 :::{grid-item-card}
 ![](_static/faces/12_Rohan_Hyslop.jpg) 
 +++
-Rohan Hyslop
+<a href="search.html?q=Rohan+Hyslop" style="text-decoration: none; color: inherit;">Rohan Hyslop</a>
 :::
-::::
-
-::::{grid}
-:gutter: 2
-
 :::{grid-item-card}
 ![](_static/faces/13_Phil_Walker.jpg) 
 +++
-Phil Walker
+<a href="search.html?q=Phil+Walker" style="text-decoration: none; color: inherit;">Phil Walker</a>
 :::
 :::{grid-item-card}
 ![](_static/faces/14_Andrew_Cheffers.jpg) 
 +++
-Andrew Cheffers
+<a href="search.html?q=Andrew+Cheffers" style="text-decoration: none; color: inherit;">Andrew Cheffers</a>
 :::
+::::
+
+::::{grid}
+:gutter: 2
+
 :::{grid-item-card}
 ![](_static/faces/15_Paul_DeJong.jpg) 
 +++
-Paul DeJong
+<a href="search.html?q=Paul+De+Jong" style="text-decoration: none; color: inherit;">Paul De Jong</a>
 :::
 :::{grid-item-card}
 ![](_static/faces/16_Arpad_Koscik.jpg) 
 +++
-Arpad Koscik
+<a href="search.html?q=Arpad+Koscik" style="text-decoration: none; color: inherit;">Arpad Koscik</a>
 :::
-::::
-
-::::{grid}
-:gutter: 2
-
 :::{grid-item-card}
 ![](_static/faces/17_Noel_Schoknecht.jpg) 
 +++
-Noel Schoknecht
+<a href="search.html?q=Noel+Schoknecht" style="text-decoration: none; color: inherit;">Noel Schoknecht</a>
 :::
 :::{grid-item-card}
 ![](_static/faces/18_Ariadna_Iskhakova.jpg) 
 +++
-Ariadna Iskhakova
-:::
-:::{grid-item-card}
-![](_static/faces/19_Ann_Ingwersen.jpg) 
-+++
-Ann Ingwersen
-:::
-:::{grid-item-card}
-![](_static/faces/20_Frank_Ingwersen.jpg)
-+++
-Frank Ingwersen
+<a href="search.html?q=Ariadna+Iskhakova" style="text-decoration: none; color: inherit;">Ariadna Iskhakova</a>
 :::
 ::::
 
@@ -130,27 +155,48 @@ Frank Ingwersen
 :gutter: 2
 
 :::{grid-item-card}
-![](_static/faces/21_AlexMaximov.jpg)
+![](_static/faces/19_Ann_Ingwersen.jpg) 
 +++
-Alex Maximov
+<a href="search.html?q=Ann+Ingwersen" style="text-decoration: none; color: inherit;">Ann Ingwersen</a>
 :::
 :::{grid-item-card}
-![](_static/faces/a.jpg)
+![](_static/faces/20_Frank_Ingwersen.jpg)
 +++
--
+<a href="search.html?q=Frank+Ingwersen" style="text-decoration: none; color: inherit;">Frank Ingwersen</a>
 :::
 :::{grid-item-card}
-![](_static/faces/a.jpg)
+![](_static/faces/21_AlexMaksimov.jpg)
 +++
--
+<a href="search.html?q=Alex+Maksimov" style="text-decoration: none; color: inherit;">Alex Maksimov</a>
+:::
+:::{grid-item-card}
+![](_static/faces/22_Henry_Gotzinger.jpg)
++++
+<a href="search.html?q=Henry+Gotzinger" style="text-decoration: none; color: inherit;">Henry Gotzinger</a>
+:::
+::::
+
+::::{grid}
+:gutter: 2
+
+:::{grid-item-card}
+![](_static/faces/23_OliverGotzinger.jpg)
++++
+<a href="search.html?q=Oliver+Gotzinger" style="text-decoration: none; color: inherit;">Oliver Gotzinger</a>
+:::
+:::{grid-item-card}
+![](_static/faces/24_Owen_Radajewski.jpg)
++++
+<a href="search.html?q=Owen+Radajewski" style="text-decoration: none; color: inherit;">Owen Radajewski</a>
+:::
+:::{grid-item-card}
+![](_static/faces/25_Tate_Needham.jpg)
++++
+<a href="search.html?q=Tate+Needham" style="text-decoration: none; color: inherit;">Tate Needham</a>
 :::
 :::{grid-item-card}
 ![](_static/faces/26_Veronika_Iskhakova.jpg)
 +++
-Veronika Iskhakova
+<a href="search.html?q=Veronika+Iskhakova" style="text-decoration: none; color: inherit;">Veronika Iskhakova</a>
 :::
-
-
 ::::
-
-Clicking on the name runs a search over the whole Operations Manual for this person.
