--- a/02.people.md
+++ b/02.people.md
@@ -71,15 +71,16 @@ This pages lists the functions
 ## Arena team
 
 - follow the [schedule](schedule:warmup) for the `arena team` on each day
-- set up all [tents, chair and tables](equipment:tents)
 - set up and collect all banners and road signs for each event
-- set up the podium and press wall for the presentations
-- set up all flags according to the arena plan for each event
+- set up all [tents, chair and tables](equipment:tents) according to arena plan for each event
   - WARM-UP [arena diagram](arena-diagram:warmup)
   - MASS [arena diagram](arena-diagram:mass)
   - MIDDLE [arena diagram](arena-diagram:middle)
   - SPRINT [arena diagram](arena-diagram:sprint)
   - LONG [arena diagram](arena-diagram:long)
+- move the toilets trailer to the designated spots according to the [schedule]
+- set up the podium and press wall for the presentations
+- set up all flags according to the arena plan for each event
 - deliver equipment to each tent, including
   - [general arena equipment](equipment:arena)
   - [IT tent gear](equipment:it)
@@ -87,7 +88,7 @@ This pages lists the functions
   - [commentary equipment](equipment:commentator)
   - [come-and-try materials](equipment:cometry)
 - help start team with the [start gear](equipment:start) if necessary
-- move the toilets to the designated spots according to the [schedule](schedule:warmup)
+(schedule:warmup)
 - coordinate with the IT team for the setup and pack up of the IT equipment
 - set out and collect garbage bags and bins at the arena
 - pack up all equipment and gear for the next event
