Volunteers page done

--- a/02.people.md
+++ b/02.people.md
@@ -1,6 +1,15 @@
 # 🙋 Volunteer roles and roster
 
-This pages lists the functions 
+This pages lists functions and names of all the volunteers who running the Carnival.
+
+:::{admonition} Call for volunteers
+:class: danger
+
+**We need your help!** Join the great team of volunteers!  
+Please, look through the unfilled roles below and [email Marina](mailto:marina.iskhakova@gmail.com?subject=Volunteer) or call `0412308310`.  
+We will be thankful even if you can help during one day, or just some hours.
+
+:::
 
 | Name | Contact | Role |
 |:-|-|-:|
@@ -31,20 +40,23 @@ This pages lists the functions
 (people:special)=
 ## Special support roles
 
-| Name | Contact | Role | Present at events |
+| Name | Contact | Role | Availability |
 |:-|-|-:|-:|
 | <span style="background-color: black; color: white;">&nbsp;Jim Anderson&nbsp;</span> | In memory | Social & Trails | In memory |
-| Phil Walker | | Grants | Yes |
-| Andrew Cheffers | | OACT Finance | Yes |
+| Phil Walker | | Grants | yes |
+| Andrew Cheffers | | OACT Finance | yes |
 | Paul De Jongh | | OACT Website | |
-| Arpad Koscik | | Commentary | Yes |
-| Emily Stewart-Reed | | Promo & Social Media | Yes |
-| Raynie McNee | | Promo & Social Media | Yes |
-| Alysha McNee | | Promo & Social Media | Yes |
+| Arpad Koscik | | Commentary | yes |
+| Emily Stewart-Reed | | Promo & Social Media | yes |
+| Raynie McNee | | Promo & Social Media | yes |
+| Alysha McNee | | Promo & Social Media | yes |
 | Noel Schoknecht  | | Design | No |
-| Ariadna Iskhakova | | Design | Yes |
-| Veronika Iskhakova | | Presentations Assistant | Yes |
-
+| Ariadna Iskhakova | | Design | yes |
+| Veronika Iskhakova | | Presentations Assistant | yes |
+| John Harding | | Photography | yes |
+| Kelvin Meng | | Photography | ? |
+| Tom De Jong | | Photography | ? |
+| Tash Thackray  | | Photography | dinner |
 
 (people:start)=
 ## Start team 
@@ -66,6 +78,13 @@ This pages lists the functions
 | ? | | Champ starts | ? |
 | ? | | Carnival starts | ? |
 | ? | | Carnival starts | ? |
+
+:::{admonition} Call for volunteers
+:class: danger
+
+We need 5 volunteers to fill the `start team` roles in each event (warm-up, mass, middle, sprint, long).
+:::
+
 
 (people:arena)=
 ## Arena team
@@ -100,10 +119,15 @@ This pages lists the functions
 |:-|-|-:|-:|
 | ? | | Leader of the `arena team` | all events |
 | Sergei Maksimov | | Active glass van driver | Saturday, Sunday |
-| ? | | | Thursday, Friday |
-| ? | | | |
-| ? | | | |
-| Rohan Hyslop | | Toilets | all events |
+| Rohan Hyslop | | Toilets trailer | all events |
+| ? | | | ? |
+| ? | | | ? |
+
+:::{admonition} Call for volunteers
+:class: danger
+
+We need 3 more volunteers to fill the `arena team` roles in each event (warm-up, mass, middle, sprint, long). Besides, we need a dedicated team leader who would be able to commit to all events.
+:::
 
 
 (people:registration-hire)=
@@ -130,10 +154,17 @@ This pages lists the functions
 
 | Name | Contact | Role | Availability |
 |:-|-|-:|-:|
-| ? | | | |
-| ? | | | |
-| Ann Scown | | Map boards hire | ? |
-| John Scown | | Map boards hire | ? |
+| ? | | | ? |
+| ? | | | ? |
+| ? | | | ? |
+| Ann Scown | | Map boards hire | all events |
+| John Scown | | Map boards hire | all events |
+
+:::{admonition} Call for volunteers
+:class: danger
+
+We need 3 more volunteers to work at the registration tent in each event (warm-up, mass, middle, sprint, long), in particular on Thursday and Friday.
+:::
 
 
 (people:computers)=
@@ -151,7 +182,8 @@ This pages lists the functions
 | Henry Gotzinger | | MeOS | <tt>10111</tt> |
 | Oliver Gotzinger | | MeOS | <tt>00111</tt> |
 | Owen Radajewski | | MeOS | <tt>00001</tt> |
-| Tate Needham | | meshO radio controls | |
+| ? | | MeOS | <tt>01000</tt> |
+| Tate Needham | | meshO radio controls | ? |
 
 - Availability indicated for WARM-UP, MASS, MIDDLE, SPRINT, LONG
 
@@ -162,30 +194,48 @@ This pages lists the functions
 - follow the [schedule](schedule:warmup) for the `parking team` on each day
 - parking marshals meet the arriving competitors and guide them to the parking spots
 - traffic marshals ensure safety of competitors when moving along and crossing the public roads
-- *MASS event will require particular care as the parking spots are limited and distributed along heavily used road*
-- *LONG event at Kowan forest is run behind the locked gate, requiring special marshals at the gate to let in and out competitors, see corresponding entries in the [schedule](schedule:long)*
+- follow parking and traffic plans for each event (warm-up, mass, middle, sprint, long)
+- *MASS event will require particular care as the parking spots are limited and distributed along heavily used Uriarra road*
+- *MIDDLE requires a ride to the start (4km) and a ride from the finish (1km) which will require traffic marshals*
+- *LONG event at Kowen forest is run behind the locked gate, requiring special marshals at the gate to let in and out competitors, see corresponding entries in the [schedule](schedule:long)*
+
+:::{admonition} Call for volunteers
+:class: danger
+
+We need *many* volunteers to fill the `parking team` roles.  But the days are very different: the table below lists all slots that have to be filled.
+:::
 
 | Name | Contact | Role | Availability |
 |:-|-|-:|-:|
-| ? | | Parking marshal | WARM-UP, SPINT |
-| ? | | Parking marshal | ? |
-| ? | | Parking marshal | ? |
-| ? | | Parking marshal | ? |
-| ? | | Parking marshal | ? |
-| Ann Ingwersen | | Traffic marshal | Friday, ? |
-| Frank Ingwersen | | Traffic marshal | Friday, ?<br/>Saturday, ? |
-| ? | | Traffic marshal | ? |
-| ? | | Traffic marshal | ? |
-| ? | | Traffic marshal | ? |
-| ? | | Kowan gate marshal | Sunday, 7:00 - 10:00 |
-| ? | | Kowan gate marshal | Sunday, ? |
+| ? | | Parking marshal | WARM-UP, Oct 17, Thursday 14:30-17:00 |
+| ? | | Parking marshal | WARM-UP, Oct 17, Thursday 15:30-17:00 |
+| ? | | Parking marshal | WARM-UP, Oct 17, Thursday 15:30-17:00 |
+| ? | | Parking marshal | MASS, Oct 18, Friday 14:30 - 16:15 |
+| ? | | Parking marshal | MASS, Oct 18, Friday 14:30 - 16:15 |
+| ? | | Parking marshal | MASS, Oct 18, Friday 14:30 - 16:15 |
+| ? | | Traffic marshal | MASS, Oct 18, Friday 14:30 - 16:15 |
+| ? | | Traffic marshal | MASS, Oct 18, Friday 14:30 - 16:15 |
+| ? | | Traffic marshal | MASS, Oct 18, Friday 17:15 - 19:00 |
+| ? | | Traffic marshal | MASS, Oct 18, Friday 17:15 - 19:00 |
+| ? | | Parking marshal | MIDDLE, Oct 19, Friday 7:00 - 9:30 |
+| ? | | Parking marshal | MIDDLE, Oct 19, Friday 7:00 - 9:30 |
+| ? | | Traffic marshal | MIDDLE, Oct 19, Friday 8:00 - 10:00 |
+| ? | | Traffic marshal | MIDDLE, Oct 19, Friday 8:00 - 12:00 |
+| ? | | Traffic marshal | MIDDLE, Oct 19, Friday 9:00 - 12:00 |
+| ? | | Parking marshal | SPRINT, Oct 19, Friday 12:30 - 14:00 |
+| ? | | Parking marshal | SPRINT, Oct 19, Friday 12:30 - 14:00 |
+| ? | | Parking marshal | LONG, Oct 20, Sunday 7:30 - 9:30 |
+| ? | | Parking marshal | LONG, Oct 20, Sunday 7:30 - 9:30 |
+| ? | | Gate marshal | LONG, Oct 20, Sunday 7:30 - 10:00 |
+| ? | | Gate marshal | LONG, Oct 20, Sunday 10:00 - 12:20 |
+| ? | | Gate marshal | LONG, Oct 20, Sunday 12:30 - 16:00 |
 
 
 (people:cometry)=
 ## Come-and-try team
 
 - follow the [schedule](schedule:warmup) for the Come-and-try tent on each day
-- welcome newcomers orienteers and MTBO riders
+- welcome newcomer orienteers and MTBO riders
 - provide help and instructions on how to begin MTBO
 - educate about orienteering in general
 
@@ -193,7 +243,7 @@ This pages lists the functions
 |:-|-|-:|-:|
 | Toni Brown | | Coach | ? |
 | Raynie McNee | | Coach | ? |
-| ? | | Coach | ? |
+| Emily Stewart-Reed | | Coach | ? |
 
 (people:kids-tent)=
 ## Kids tent
@@ -204,8 +254,14 @@ This pages lists the functions
 
 | Name | Contact | Role | Availability |
 |:-|-|-:|-:|
-| ? | | Caregiver | ? |
-| ? | | Caregiver | ? |
+| ? | | Supervisor | ? |
+| ? | | Supervisor | ? |
+
+:::{admonition} Call for volunteers
+:class: danger
+
+We need lovely volunteers to work at the kids tent in each event (warm-up, mass, middle, sprint, long).
+:::
 
 
 (people:controls)=
