--- a/03.equipment.md
+++ b/03.equipment.md
@@ -39,6 +39,8 @@ Right five columns indicate whether the item is required for the individual even
 - press wall 3x2.4m
 - logo banners?
 
+- road signs
+
 ### + dinner
 
 - podium
@@ -47,6 +49,7 @@ Right five columns indicate whether the item is required for the individual even
 - diplomas, certificates, medals, prizes
 - they do have audio/PA system
 - will there be a projector for photos?
+
 
 (equipment:it)=
 ## Central IT tent
@@ -134,6 +137,7 @@ Right five columns indicate whether the item is required for the individual even
 
 - high viz vests
 - gate marshals -- tent, chairs, umbrellas ??
+- flag/sign for traffic marshals
 
 
 
