--- a/01.schedule.md
+++ b/01.schedule.md
@@ -66,7 +66,7 @@
 | When | What | Who |
 |--|--|--|
 | 6:17 | 🌅 Sunrise | |
-| 12:00 - 15:00 | Controls setup | Cathy, Belinda, Jo, Susie, Alison, Shannon, Rebecca |
+| 12:00 - 15:00 | Controls setup | Cathy, Belinda, Jo, Susie,<br/>Alison, Shannon, Rebecca |
 | by 14:00 | Toilets 🚻 arrive | Rohan |
 | 14:00 - 15:00 | Arena 🎪 setup <br/> Registration tent <br/> IT team tent <br/> Commentator tent | Fedor, Sergei <br/> `arena team` <br/> `IT team` |
 | 14:30 - 16:15 | Parking and traffic marshals 🚗 | `parking team` |
@@ -85,7 +85,7 @@
 | Aprx. 18:45 | Presentation ceremony 🏆 for MASS | Marina, Veronika, Cathy, Belinda |
 | 19:00 | **MASS course closure** 🏁 | |
 | 19:00 - 20:00 | Arena 🎪 pack up | `arena team` |
-| 19:00 - 20:00 | Controls collection | Cathy, Belinda, Jo, Susie, Alison, Shannon, Rebecca |
+| 19:00 - 20:00 | Controls collection | Cathy, Belinda, Jo, Susie,<br/>Alison, Shannon, Rebecca |
 | 19:21 | 🌅 Sunset | |
 | by 21:00 | Publish official results 🧾 for MASS | Marina, Fedor |
 | by 21:00 | Everyone leaves West Stromlo | |
@@ -102,13 +102,14 @@
 | 6:16 | 🌅 Sunrise | |
 | 6:30 - 7:30 | Arena 🎪 setup <br/> Registration tent <br/> IT team tent <br/> Commentator tent | Fedor, Sergei <br/> `arena team` <br/> `IT team` |
 | 6:30 - 8:30 | Starts A and B setup | `start team` |
-| 7:00 - 10:00 | Parking and traffic marshals 🚗 to start | `parking team` |
+| 7:00 - 9:30 | Parking marshals 🚗 | `parking team` |
 | 7:30 | **Event center opens** 🎪 | |
 | 7:30 - 8:30 | Start 🚀 setup | `start team` |
 | 7:30 - 11:00 | Coffee van ☕️ | KDS coffee |
 | 7:30 - 12:00 | Mojo Bike Repairs 🔧 | Chris |
 | 7:30 - 9:30 | Come-and-try MTBO tent 🧭 | Toni, Raynie |
 | 8:00 - 12:00 | 📣 Commentator | Arpad |
+| 8:00 - 10:00 | Traffic marshals 🚗 to start | `parking team` |
 | 8:00 - 12:30 | Kids' tent 👦 | ? |
 | 8:30 - 10:00 | 🚴‍♀️ **Start window for MIDDLE** | `start team` |
 | 9:00 - 12:00 | First-Aid officer 🚑 at te finish |  |
@@ -194,7 +195,7 @@ at **Harmonie German Club**
 | 13:30 | **LONG course closure** 🏁 | |
 | 13:30 - 15:30 | Controls collection | 6? |
 | 13:30 - 15:30 | Arena 🎪 pack up | `arena team` |
-| 16:00 | Kowen forest gates locked | |
+| 16:00 | Kowen forest gates locked | `parking team` |
 | by 16:30 | Everyone leaves Kowen forest | |
 | by 17:30 | Publish official results 🧾 for LONG | Marina, Fedor |
 | 19:23 | 🌅 Sunset | |
