Update to people and faces

--- a/02.people.md
+++ b/02.people.md
@@ -271,10 +271,16 @@ We need lovely volunteers to work at the kids tent in each event (warm-up, mass,
 - help with setting and especially collecting controls is *greatly appreciated*
 - see the [schedule](schedule:warmup) for the course closure time for each event, after which the control collection teams will start their work
 
+:::{admonition} Call for volunteers
+:class: danger
+
+We need 11 more helpers to collect controls after the events.  Please, see the table below to see at which events you can contribute.
+:::
+
 | Event | Setup | Collection |
 |:-|-:|-:|
-| WARM-UP | Marina<br/>Ariadna | Marina<br/>3? |
+| WARM-UP | Marina<br/>Ariadna | Marina<br/>**+3 people** |
 | MASS | Cathy<br/>Belinda<br/>Jo Allison<br/>Susie Kluth<br/>Alison Inglis<br/>Shannon Jones<br/>Rebecca Minty | Cathy<br/>Belinda<br/>Jo Allison<br/>Susie Kluth<br/>Alison Inglis<br/>Shannon Jones<br/>Rebecca Minty|
 | MIDDLE | Michael<br/>Emily<br/>Tom<br/>Emily<br/>Matt Shadwell | Michael<br/>Emily<br/>Tom<br/>Emily<br/>Matt Shadwell |
-| SPRINT | Eoin<br/>Cath | Eoin<br/>Cath<br/>2? |
-| LONG | Marina<br/>Fedor | 6? |
+| SPRINT | Eoin<br/>Cath | Eoin<br/>Cath<br/>**+2 people** |
+| LONG | Marina<br/>Fedor | **+6 people** |
