--- a/02.faces.md
+++ b/02.faces.md
@@ -7,22 +7,26 @@
 :::{grid-item-card}
 ![](_static/faces/1_Marina_Iskhakova.jpg)
 +++
-<a href="search.html?q=Marina+Iskhakova" style="text-decoration: none; color: inherit;">Marina Iskhakova</a>
+<a href="search.html?q=Marina+Iskhakova" style="text-decoration: none; color: inherit;">Marina Iskhakova</a><br/>
+Carnival Director
 :::
 :::{grid-item-card}
 ![](_static/faces/2_Fedor_Iskhakov.jpg)
 +++
-<a href="search.html?q=Fedor+Iskhakov" style="text-decoration: none; color: inherit;">Fedor Iskhakov</a>
+<a href="search.html?q=Fedor+Iskhakov" style="text-decoration: none; color: inherit;">Fedor Iskhakov</a><br/>
+Technical Director
 :::
 :::{grid-item-card}
 ![](_static/faces/3_Sandor_Talas.jpg) 
 +++
-<a href="search.html?q=Sandor+Talas" style="text-decoration: none; color: inherit;">Sandor Talas</a>
+<a href="search.html?q=Sandor+Talas" style="text-decoration: none; color: inherit;">Sandor Talas</a><br/>
+IOF Advisor
 :::
 :::{grid-item-card}
 ![](_static/faces/4_Andrew_Slattery.jpg) 
 +++
-<a href="search.html?q=Andrew+Slattery" style="text-decoration: none; color: inherit;">Andrew Slattery</a>
+<a href="search.html?q=Andrew+Slattery" style="text-decoration: none; color: inherit;">Andrew Slattery</a><br/>
+Mapper
 :::
 ::::
 
@@ -32,22 +36,26 @@
 :::{grid-item-card}
 ![](_static/faces/1_WarmUp_JimAnderson.jpg)
 +++
-<a href="search.html?q=Jim+Anderson" style="text-decoration: none; background-color: black; color: white;">&nbsp;Jim Anderson&nbsp;</a>
-:::
-:::{grid-item-card}
-![](_static/faces/2_MASS_Belinda.jpg)
-+++
-<a href="search.html?q=Belinda+Allison" style="text-decoration: none; color: inherit;">Belinda Allison</a>
+<a href="search.html?q=Jim+Anderson" style="text-decoration: none; background-color: black; color: white;">&nbsp;Jim Anderson&nbsp;</a><br/>
+Social and trails
 :::
 :::{grid-item-card}
 ![](_static/faces/2_MASS_CathyHogg.jpg)
 +++
-<a href="search.html?q=Cathy+Hogg" style="text-decoration: none; color: inherit;">Cathy Hogg</a>
+<a href="search.html?q=Cathy+Hogg" style="text-decoration: none; color: inherit;">Cathy Hogg</a><br/>
+Course setter MASS
+:::
+:::{grid-item-card}
+![](_static/faces/2_MASS_Belinda.jpg)
++++
+<a href="search.html?q=Belinda+Allison" style="text-decoration: none; color: inherit;">Belinda Allison</a><br/>
+Course controller MASS
 :::
 :::{grid-item-card}
 ![](_static/faces/3_MIDDLE_MichaelReed.jpg)
 +++
-<a href="search.html?q=Michael+Reed" style="text-decoration: none; color: inherit;">Michael Reed</a>
+<a href="search.html?q=Michael+Reed" style="text-decoration: none; color: inherit;">Michael Reed</a><br/>
+Course setter MIDDLE
 :::
 ::::
 
@@ -57,22 +65,26 @@
 :::{grid-item-card}
 ![](_static/faces/3_MIDDLE_EmilyWalter.jpg)
 +++
-<a href="search.html?q=Emily+Walter" style="text-decoration: none; color: inherit;">Emily Walter</a>
+<a href="search.html?q=Emily+Walter" style="text-decoration: none; color: inherit;">Emily Walter</a><br/>
+Course controller MIDDLE
 :::
 :::{grid-item-card}
 ![](_static/faces/3_MIDDLE_TomWalter.jpg)
 +++
-<a href="search.html?q=Tom+Walter" style="text-decoration: none; color: inherit;">Tom Walter</a>
+<a href="search.html?q=Tom+Walter" style="text-decoration: none; color: inherit;">Tom Walter</a><br/>
+Course controller MIDDLE
 :::
 :::{grid-item-card}
 ![](_static/faces/9_Cath_Chalmers.jpg)
 +++
-<a href="search.html?q=Cath+Chalmers" style="text-decoration: none; color: inherit;">Cath Chalmers</a>
+<a href="search.html?q=Cath+Chalmers" style="text-decoration: none; color: inherit;">Cath Chalmers</a><br/>
+Course setter SPRINT
 :::
 :::{grid-item-card}
 ![](_static/faces/4_SPRINT_EoinRothery.jpg)
 +++
-<a href="search.html?q=Eoin+Rothery" style="text-decoration: none; color: inherit;">Eoin Rothery</a>
+<a href="search.html?q=Eoin+Rothery" style="text-decoration: none; color: inherit;">Eoin Rothery</a><br/>
+Course controller SPRINT
 :::
 ::::
 
@@ -82,22 +94,26 @@
 :::{grid-item-card}
 ![](_static/faces/5_Emily_StewartReed.jpg) 
 +++
-<a href="search.html?q=Emily+Stewart-Reed" style="text-decoration: none; color: inherit;">Emily Stewart-Reed</a>
+<a href="search.html?q=Emily+Stewart-Reed" style="text-decoration: none; color: inherit;">Emily Stewart-Reed</a><br/>
+Promo, social, come-and-try coach
 :::
 :::{grid-item-card}
 ![](_static/faces/6_Raynie_McNee.jpg) 
 +++
-<a href="search.html?q=Raynie+McNee" style="text-decoration: none; color: inherit;">Raynie McNee</a>
+<a href="search.html?q=Raynie+McNee" style="text-decoration: none; color: inherit;">Raynie McNee</a><br/>
+Promo, social, come-and-try coach
 :::
 :::{grid-item-card}
 ![](_static/faces/7_Alysha_McNee.jpg) 
 +++
-<a href="search.html?q=Alysha+McNee" style="text-decoration: none; color: inherit;">Alysha McNee</a>
+<a href="search.html?q=Alysha+McNee" style="text-decoration: none; color: inherit;">Alysha McNee</a><br/>
+Promo, social
 :::
 :::{grid-item-card}
 ![](_static/faces/10_Ann_Scown.jpg) 
 +++
-<a href="search.html?q=Ann+Scown" style="text-decoration: none; color: inherit;">Ann Scown</a>
+<a href="search.html?q=Ann+Scown" style="text-decoration: none; color: inherit;">Ann Scown</a><br/>
+Equipment, hire
 :::
 ::::
 
@@ -107,22 +123,26 @@
 :::{grid-item-card}
 ![](_static/faces/11_John_Scown.jpg) 
 +++
-<a href="search.html?q=John+Scown" style="text-decoration: none; color: inherit;">John Scown</a>
+<a href="search.html?q=John+Scown" style="text-decoration: none; color: inherit;">John Scown</a><br/>
+Equipment, hire
 :::
 :::{grid-item-card}
 ![](_static/faces/12_Rohan_Hyslop.jpg) 
 +++
-<a href="search.html?q=Rohan+Hyslop" style="text-decoration: none; color: inherit;">Rohan Hyslop</a>
+<a href="search.html?q=Rohan+Hyslop" style="text-decoration: none; color: inherit;">Rohan Hyslop</a><br/>
+Transport, logistics
 :::
 :::{grid-item-card}
 ![](_static/faces/13_Phil_Walker.jpg) 
 +++
-<a href="search.html?q=Phil+Walker" style="text-decoration: none; color: inherit;">Phil Walker</a>
+<a href="search.html?q=Phil+Walker" style="text-decoration: none; color: inherit;">Phil Walker</a><br/>
+Grants
 :::
 :::{grid-item-card}
 ![](_static/faces/14_Andrew_Cheffers.jpg) 
 +++
-<a href="search.html?q=Andrew+Cheffers" style="text-decoration: none; color: inherit;">Andrew Cheffers</a>
+<a href="search.html?q=Andrew+Cheffers" style="text-decoration: none; color: inherit;">Andrew Cheffers</a><br/>
+OACT Finance
 :::
 ::::
 
@@ -132,22 +152,26 @@
 :::{grid-item-card}
 ![](_static/faces/15_Paul_DeJong.jpg) 
 +++
-<a href="search.html?q=Paul+De+Jong" style="text-decoration: none; color: inherit;">Paul De Jong</a>
+<a href="search.html?q=Paul+De+Jong" style="text-decoration: none; color: inherit;">Paul De Jong</a><br/>
+OACT Website
 :::
 :::{grid-item-card}
 ![](_static/faces/16_Arpad_Koscik.jpg) 
 +++
-<a href="search.html?q=Arpad+Koscik" style="text-decoration: none; color: inherit;">Arpad Koscik</a>
+<a href="search.html?q=Arpad+Koscik" style="text-decoration: none; color: inherit;">Arpad Koscik</a><br/>
+Commentary
 :::
 :::{grid-item-card}
 ![](_static/faces/17_Noel_Schoknecht.jpg) 
 +++
-<a href="search.html?q=Noel+Schoknecht" style="text-decoration: none; color: inherit;">Noel Schoknecht</a>
+<a href="search.html?q=Noel+Schoknecht" style="text-decoration: none; color: inherit;">Noel Schoknecht</a><br/>
+Design
 :::
 :::{grid-item-card}
 ![](_static/faces/18_Ariadna_Iskhakova.jpg) 
 +++
-<a href="search.html?q=Ariadna+Iskhakova" style="text-decoration: none; color: inherit;">Ariadna Iskhakova</a>
+<a href="search.html?q=Ariadna+Iskhakova" style="text-decoration: none; color: inherit;">Ariadna Iskhakova</a><br/>
+Design
 :::
 ::::
 
@@ -157,22 +181,26 @@
 :::{grid-item-card}
 ![](_static/faces/19_Ann_Ingwersen.jpg) 
 +++
-<a href="search.html?q=Ann+Ingwersen" style="text-decoration: none; color: inherit;">Ann Ingwersen</a>
+<a href="search.html?q=Ann+Ingwersen" style="text-decoration: none; color: inherit;">Ann Ingwersen</a><br/>
+Marshal
 :::
 :::{grid-item-card}
 ![](_static/faces/20_Frank_Ingwersen.jpg)
 +++
-<a href="search.html?q=Frank+Ingwersen" style="text-decoration: none; color: inherit;">Frank Ingwersen</a>
+<a href="search.html?q=Frank+Ingwersen" style="text-decoration: none; color: inherit;">Frank Ingwersen</a><br/>
+Marshal
 :::
 :::{grid-item-card}
 ![](_static/faces/21_AlexMaksimov.jpg)
 +++
-<a href="search.html?q=Alex+Maksimov" style="text-decoration: none; color: inherit;">Alex Maksimov</a>
+<a href="search.html?q=Alex+Maksimov" style="text-decoration: none; color: inherit;">Alex Maksimov</a><br/>
+IT team
 :::
 :::{grid-item-card}
 ![](_static/faces/22_Henry_Gotzinger.jpg)
 +++
-<a href="search.html?q=Henry+Gotzinger" style="text-decoration: none; color: inherit;">Henry Gotzinger</a>
+<a href="search.html?q=Henry+Gotzinger" style="text-decoration: none; color: inherit;">Henry Gotzinger</a><br/>
+IT team
 :::
 ::::
 
@@ -182,21 +210,42 @@
 :::{grid-item-card}
 ![](_static/faces/23_OliverGotzinger.jpg)
 +++
-<a href="search.html?q=Oliver+Gotzinger" style="text-decoration: none; color: inherit;">Oliver Gotzinger</a>
+<a href="search.html?q=Oliver+Gotzinger" style="text-decoration: none; color: inherit;">Oliver Gotzinger</a><br/>
+IT team
 :::
 :::{grid-item-card}
 ![](_static/faces/24_Owen_Radajewski.jpg)
 +++
-<a href="search.html?q=Owen+Radajewski" style="text-decoration: none; color: inherit;">Owen Radajewski</a>
+<a href="search.html?q=Owen+Radajewski" style="text-decoration: none; color: inherit;">Owen Radajewski</a><br/>
+IT team
 :::
 :::{grid-item-card}
 ![](_static/faces/25_Tate_Needham.jpg)
 +++
-<a href="search.html?q=Tate+Needham" style="text-decoration: none; color: inherit;">Tate Needham</a>
+<a href="search.html?q=Tate+Needham" style="text-decoration: none; color: inherit;">Tate Needham</a><br/>
+meshO radio controls
 :::
 :::{grid-item-card}
 ![](_static/faces/26_Veronika_Iskhakova.jpg)
 +++
-<a href="search.html?q=Veronika+Iskhakova" style="text-decoration: none; color: inherit;">Veronika Iskhakova</a>
+<a href="search.html?q=Veronika+Iskhakova" style="text-decoration: none; color: inherit;">Veronika Iskhakova</a><br/>
+Ceremonies
+:::
+::::
+
+::::{grid}
+:gutter: 2
+
+:::{grid-item-card}
+![](_static/faces/27_Sergei_Maksimov.jpg)
++++
+<a href="search.html?q=Sergei+Maksimov" style="text-decoration: none; color: inherit;">Sergei Maksimov</a><br/>
+Logistics, Active glass van
+:::
+:::{grid-item-card}
+:::
+:::{grid-item-card}
+:::
+:::{grid-item-card}
 :::
 ::::
